Attempting to use a button for Auth

--- a/messages.html
+++ b/messages.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="header">
-        <div class="messagestext">
+        <div class="messagestext" onclick="authGoogle()">
             <div>Messages</div>
             <div class="count">6</div>
         </div>
