--- a/index.html
+++ b/index.html
@@ -5,9 +5,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mail</title>
-
-    <link rel="stylesheet" href="index.css">
 </head>
+<style>
+    body {
+    user-select: none;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+body h1 {
+    position: absolute;
+    top: -150px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    font-size: 50px;
+    font-weight: 500;
+    color: rgb(78, 78, 78);
+}
+
+.signin {
+    position: absolute;
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: 10px;
+
+    width: 40%; max-width: 400px;
+}
+
+.signin > p {
+    position: absolute;
+    top: -50px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    color: rgb(172, 172, 172);
+}
+.google, .outlook {
+    cursor: pointer;
+
+    border-radius: 22px;
+    border: 1px solid #F0F0F0;
+    box-shadow: 0px 2px 3px #00000007;
+    background-color: rgb(255, 255, 255);
+
+    display: grid;
+    place-items: center;
+
+    transition: 0.2s ease;
+}
+.google:hover, .outlook:hover {
+    background-color: rgb(252, 252, 252);
+}
+
+.google p {
+    color: #E6B9B9;
+}
+.outlook p {
+    color: #B9D1E6;
+}
+</style>
 <body>
 
     <div class="signin">
@@ -23,5 +84,27 @@
     </div>
 
 </body>
-<script src="index.js"></script>
+<script>
+// Welcome Page 
+function onLoad () {
+    document.querySelector('.google').addEventListener('click', function() {
+        auth('google')
+    }) 
+    document.querySelector('.outlook').onclick = authOutlook
+}
+onLoad()
+
+
+function auth (client) {
+    localStorage.setItem('client', client);
+    window.location.href = 'messages.html'
+}
+
+
+// Authenticate for Outlook
+
+function authOutlook () {
+
+}
+</script>
 </html>
