--- a/index.html
+++ b/index.html
@@ -5,106 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mail</title>
+
+    <link rel="stylesheet" href="https://use.typekit.net/tif0idz.css">
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
+    <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="index.css">
 </head>
-<style>
-    body {
-    user-select: none;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-body h1 {
-    position: absolute;
-    top: -150px;
-    left: 50%;
-    transform: translateX(-50%);
-
-    font-size: 50px;
-    font-weight: 500;
-    color: rgb(78, 78, 78);
-}
-
-.signin {
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 10px;
-
-    width: 40%; max-width: 400px;
-}
-
-.signin > p {
-    position: absolute;
-    top: -50px;
-    left: 50%;
-    transform: translateX(-50%);
-
-    color: rgb(172, 172, 172);
-}
-.google, .outlook {
-    cursor: pointer;
-
-    border-radius: 22px;
-    border: 1px solid #F0F0F0;
-    box-shadow: 0px 2px 3px #00000007;
-    background-color: rgb(255, 255, 255);
-
-    display: grid;
-    place-items: center;
-
-    transition: 0.2s ease;
-}
-.google:hover, .outlook:hover {
-    background-color: rgb(252, 252, 252);
-}
-
-.google p {
-    color: #E6B9B9;
-}
-.outlook p {
-    color: #B9D1E6;
-}
-</style>
 <body>
+        <!--
+        <img src="content/mockups/mockuperPostClient.png" alt="">
+        <img src="content/mockups/CleanEmailMockup.png" alt="">
+        <img src="content/mockups/darkEdited.png" alt="">
+        -->
 
-    <div class="signin">
-        <h1>Welcome</h1>
-        <p>Sign in</p>
+    <div class="navouter">
+        <span>Post</span>
 
-        <div class="google">
-            <p>Google</p>
+        <span></span>
+
+        <span>How it works</span>
+        <span>FAQ</span>
+        <span>Reviews</span>
+        <span>Blog</span>
+        <span>Contact</span>
+        <span>Get started</span>
+    </div>
+
+    <div class="maincontent">
+        <div class="innergrid">
+            <img src="content/mockups/mockuperPostClient.png" alt="">
+            <div class="sectioncontent">
+                <h1>The mail client that <br> <span class="italic">actually</span>  looks good.</h1>
+                <p>Post brings <span class="underline">intuitive and simple controls</span>  to email <br> while helping customers control the crazy feed <br> of seemingly <span class="italic lighter">endless</span>  emails.</p>
+            </div>
+
+            <div class="sectioncontent">
+                <h1>Quickly manage your <br> messages</h1>
+                <p><span class="darker">Archive, delete, label, mark,</span> you name it - <br> easily take action on <span class="lighter italic">any</span> message. <br><br> <span class="underline">For the efficient expediter,</span> you can customize <br> controls to your needs <span class="darker">within seconds.</span></p>
+            </div>
+            <img src="content/mockups/CleanEmailMockup.png" alt="">
+
+            <img src="content/mockups/darkEdited.png" alt="">
+            <div class="sectioncontent">
+                <h1>Customize your <br> experience</h1>
+                <p>For the <span class="darker underline">night owls</span> and <span class="darker underline">early birds, <br></span> soften eyes with a <span class="darker italic">dark</span> theme. <br><br> <span class="darker">Decide</span> what tools to use, <span class="darker">modify</span> quick-swipe options, <br> and <span class="underline">change what comes in your feed</span> — get that <br> junk outta’ here!</p>
+            </div>
         </div>
-        <div class="outlook">
-            <p>Outlook</p>
+
+        <div class="globalbottom">
+            <h1>...and more to come</h1>
+            <p>
+                For now, check out the latest blogs on our status. 
+                <br>
+                Building apps doesn’t happen overnight!
+            </p>
+            <div class="button bottombutton">
+                <span>BLOG</span>
+                <span class="material-icons-outlined">launch</span>
+            </div>
         </div>
     </div>
 
 </body>
-<script>
-// Welcome Page 
-function onLoad () {
-    document.querySelector('.google').addEventListener('click', function() {
-        auth('google')
-    }) 
-    document.querySelector('.outlook').onclick = authOutlook
-}
-onLoad()
-
-
-function auth (client) {
-    localStorage.setItem('client', client);
-    window.location.href = 'messages.html'
-}
-
-
-// Authenticate for Outlook
-
-function authOutlook () {
-
-}
-</script>
+<script src="index.js"></script>
 </html>
