--- a/index.html
+++ b/index.html
@@ -4,20 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mail</title>
+    <title>Post</title>
 
     <link rel="stylesheet" href="https://use.typekit.net/tif0idz.css">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="global.css">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="CSS/global.css">
+    <link rel="stylesheet" href="CSS/index.css">
+
+    <link rel="icon" href="content/PostIcon.png">
 </head>
 <body>
-        <!--
-        <img src="content/mockups/mockuperPostClient.png" alt="">
-        <img src="content/mockups/CleanEmailMockup.png" alt="">
-        <img src="content/mockups/darkEdited.png" alt="">
-        -->
-
     <div class="navouter">
         <span>Post</span>
 
@@ -31,9 +27,11 @@
         <span>Get started</span>
     </div>
 
-    <div class="maincontent">
+    <div class="maincontent"  id="butter">
+
+
         <div class="innergrid">
-            <img src="content/mockups/mockuperPostClient.png" alt="">
+            <img class="phone" src="content/mockups/mockuperPostClient.png" alt="">
             <div class="sectioncontent">
                 <h1>The mail client that <br> <span class="italic">actually</span>  looks good.</h1>
                 <p>Post brings <span class="underline">intuitive and simple controls</span>  to email <br> while helping customers control the crazy feed <br> of seemingly <span class="italic lighter">endless</span>  emails.</p>
@@ -43,9 +41,9 @@
                 <h1>Quickly manage your <br> messages</h1>
                 <p><span class="darker">Archive, delete, label, mark,</span> you name it - <br> easily take action on <span class="lighter italic">any</span> message. <br><br> <span class="underline">For the efficient expediter,</span> you can customize <br> controls to your needs <span class="darker">within seconds.</span></p>
             </div>
-            <img src="content/mockups/CleanEmailMockup.png" alt="">
+            <img class="phone"  src="content/mockups/CleanEmailMockup.png" alt="">
 
-            <img src="content/mockups/darkEdited.png" alt="">
+            <img class="phone"  src="content/mockups/darkEdited.png" alt="">
             <div class="sectioncontent">
                 <h1>Customize your <br> experience</h1>
                 <p>For the <span class="darker underline">night owls</span> and <span class="darker underline">early birds, <br></span> soften eyes with a <span class="darker italic">dark</span> theme. <br><br> <span class="darker">Decide</span> what tools to use, <span class="darker">modify</span> quick-swipe options, <br> and <span class="underline">change what comes in your feed</span> — get that <br> junk outta’ here!</p>
@@ -67,5 +65,6 @@
     </div>
 
 </body>
-<script src="index.js"></script>
+<script src="JS/butter.js"></script>
+<script src="JS/index.js"></script>
 </html>
