--- a/How-it-works.html
+++ b/How-it-works.html
@@ -44,7 +44,9 @@
                     <br><br>
                     Then, a sign in will prompt you with <br> two options: <span class="underline darker">Google</span> or <span class="underline darker">Outlook</span>. 
                     <br><br>
-                    <span class="darker italic">As of 3.13.2021, Outlook is not supported.</span>
+                    <span class="darker italic underline">You will encounter a screen that says "This app isn't verified"; <br> this is a result of Google requiring all apps that use their <br> Gmail API to verify. Simply click "Advanced",  then "continue <br>  to Post".</span>
+                    <br><br>
+                    <span class="lighter italic">As of 3.13.2021, Outlook is not supported.</span>
                 </p>
             </div>
             <img class="phone" src="content/mockups/iphoneXWelcomeScreenHands.png" alt="">
