--- a/Blog.html
+++ b/Blog.html
@@ -78,6 +78,11 @@
             </div>
         </div>
 
+        <div class="coverpage">
+            <div style="font: normal normal 500 49px/38px sofia-pro, serif; color: rgb(88, 85, 71);">Sorry        <br><br>
+                <div style="font: normal normal 400 19px/38px sofia-pro, serif; color: rgb(121, 119, 111);">we're not that responsive yet.</div>
+            </div>
+        </div>
 </body>
 <script src="JS/butter.js"></script>
 <script src="JS/Blogs.js"></script>
