--- a/Contact.html
+++ b/Contact.html
@@ -35,7 +35,14 @@
                 <div class="typeform-widget" data-url="https://form.typeform.com/to/wfF0oDGM?typeform-medium=embed-snippet" style="width: 100%; height: 600px;"></div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script>
             </div>
         </div>
+    </div>
 
+    <div class="coverpage">
+        <div style="font: normal normal 500 49px/38px sofia-pro, serif; color: rgb(88, 85, 71);">Sorry        <br><br>
+            <div style="font: normal normal 400 19px/38px sofia-pro, serif; color: rgb(121, 119, 111);">we're not that responsive yet.</div>
+        </div>
+    </div>
+        
 </body>
 <script src="JS/butter.js"></script>
 <script src="JS/Contact.js"></script>
